fixed image icons for size and to prevent image overflow

--- a/style.css
+++ b/style.css
@@ -6,12 +6,27 @@
     padding: 0;
 }
 
+header,
+footer {
+    text-align: center;
+    max-width: 500px;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    line-height: 1.3;
+}
+
+header h1 {
+    margin-bottom: 20px;
+}
+
 .flex-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px dashed #999;
-    gap: 1rem;
+    gap: 1.2rem;
+    max-width: 1200px;
+    margin: auto;
 }
 
 .column-wrap {
@@ -21,34 +36,58 @@
 }
 
 .item {
+    /* position: relative; */
+    width: 260px;
     border-radius: .3rem;
     padding: 1rem;
     box-shadow: 5px 5px 8px #777;
 }
 
+.item__text {
+    margin-bottom: 30px;
+}
+
+.item img {
+    display: block;
+    margin-left: auto;
+    max-width: 100%;
+    height: auto;
+}
+
 .supervisor {
-    border-top: 2px solid hsl(180, 100%, 50%);
+    border-top: 3px solid hsl(180, 100%, 50%);
 }
 
 .team-builder {
-    border-top: 2px solid hsl(0, 78%, 62%);
+    border-top: 3px solid hsl(0, 78%, 62%);
 }
 
 .karma {
-    border-top: 2px solid hsl(34, 97%, 64%);
+    border-top: 3px solid hsl(34, 97%, 64%);
 }
 
 .calculator {
-    border-top: 2px solid hsl(212, 86%, 64%);
+    border-top: 3px solid hsl(212, 86%, 64%);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .flex-container {
         display: flex;
         flex-direction: column;
         align-items: stretch;
         justify-content: center;
         gap: 1rem;
+        padding: 1rem;
+    }
+
+    .item {
+        width: 100%;
+
+    }
+
+    header,
+    footer {
+        width: 100%;
     }
 
 }
